updates print css
use latest h5bp version

--- a/_4.print.scss
+++ b/_4.print.scss
@@ -2,12 +2,14 @@
 @include bp(print) {
   *,
   *:before,
-  *:after {
-    background: transparent !important;
-    color: #000 !important;
-    // Black prints faster: http://www.sanbeiji.com/archives/953
-    box-shadow: none !important;
-    text-shadow: none !important;
+  *:after,
+  *:first-letter,
+  *:first-line {
+      background: transparent !important;
+      color: #000 !important; /* Black prints faster:
+                                 http://www.sanbeiji.com/archives/953 */
+      box-shadow: none !important;
+      text-shadow: none !important;
   }
 
   a,
