--- a/_0.settings.sizes.scss
+++ b/_0.settings.sizes.scss
@@ -8,7 +8,7 @@ $breakpoints: (
   "mobile"              : "only screen and (max-width:740px)",
   "tablet"              : "only screen and (max-width:1050px)",
   "desktop"             : "only screen and (min-width:1051px)",
-  "print"               : "print"
+  "print"               : "print, (min-resolution: 1.25dppx), (min-resolution: 120dpi)"
 ) !default;
 
 // desktop or mobile-first?
