--- a/_1.base.scss
+++ b/_1.base.scss
@@ -1,14 +1,13 @@
 // Don't include that just use it as a starting point
 html {
-  min-height:100%;
   font: $t-default-font-family/#{$t-default-line-height} $t-default-font-family;
   color: color(black);
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  overflow-y:scroll;
+  text-size-adjust: 100%;
+  overflow-y: scroll;
 }
+
 html, body, .l-body {
-  min-height:100%;
+  min-height: 100%;
 }
 strong {
   font-weight: 400;
