--- a/_0.settings.typography.scss
+++ b/_0.settings.typography.scss
@@ -1,13 +1,13 @@
 // Typography settings
-$t-light                : 300;
-$t-regular              : 400;
-$t-bold                 : 600;
+$t-light                : 300 !default;
+$t-regular              : 400 !default;
+$t-bold                 : 600 !default;
 
-$t-default-font-size    : $s-base;
-$t-default-font-family  : 'Source Sans Pro', sans-serif;
-$t-default-font-weight  : $t-regular;
-$t-default-font-style   : normal;
-$t-default-line-height  : 1.5;
+$t-default-font-size    : $s-base !default;
+$t-default-font-family  : 'Source Sans Pro', sans-serif !default;
+$t-default-font-weight  : $t-regular !default;
+$t-default-font-style   : normal !default;
+$t-default-line-height  : 1.5 !default;
 
 $types: (
   desktop: (
