--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -68,7 +68,7 @@ $types: (
       font-size     : 1.15rem
     ),
     title-page: (
-      color         : 3.5rem
+      font-size     : 3.5rem
     )
   ),
   mobile: (
