--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -45,7 +45,7 @@ $types: (
       margin        : 0
     ),
     title-sub: (
-      font-weight   : $t-light,
+      font-weight   : $t-bold,
       font-size     : 2.25rem,
       line-height   : 1.3,
       margin        : 0
