nicer font-family

--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -24,7 +24,7 @@ $t-regular              : 400;
 $t-bold                 : 700;
 
 $t-default-font-size    : 1rem;
-$t-default-font-family  : 'Roboto', sans-serif;
+$t-default-font-family  : 'Fira Sans', sans-serif;
 $t-default-font-weight  : $t-regular;
 $t-default-font-style   : normal;
 $t-default-line-height  : 1.5;
