--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -39,7 +39,7 @@ $types: (
       line-height   : 1.5
     ),
     title-page: (
-      font-weight   : $t-light,
+      font-weight   : $t-regular,
       font-size     : 4rem,
       line-height   : 1.3,
       margin        : 0
