--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -51,7 +51,7 @@ $types: (
       margin        : 0
     ),
     title: (
-      font-weight   : $t-light,
+      font-weight   : $t-bold,
       font-size     : 1.75rem,
       line-height   : 1.2
     ),
