nicer demo styles

--- a/demo/src/_demo-settings.scss
+++ b/demo/src/_demo-settings.scss
@@ -7,7 +7,7 @@ $colors: (
   orange                : rgb(250,190,110)
 );
 
-$s-design-width         : 900px;
+$s-design-width         : 57rem;
 $s-golden               : 1.61803398875;
 $s-base                 : 1rem;
 
