--- a/demo/src/prism.css
+++ b/demo/src/prism.css
@@ -30,7 +30,7 @@ pre[class*="language-"] {
 
 pre[class*="language-"],
 :not(pre) > code[class*="language-"] {
-    background: hsl(0, 0%, 8%); /* #141414 */
+    background: #16161d; /* #141414 */
 }
 
 /* Code blocks */
@@ -101,7 +101,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 .token.constant,
 .token.symbol,
 .token.builtin {
-    color: hsl(53, 89%, 79%); /* #F9EE98 */
+    color: rgb(250,190,110); /* #F9EE98 */
 }
 
 .token.attr-name,
@@ -115,7 +115,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 .style .token.string,
 .token.variable,
 .token.inserted {
-    color: hsl(76, 21%, 52%); /* #8F9D6A */
+    color: #a0fa8c; /* #8F9D6A */
 }
 
 .token.atrule {
