fixes -webkit-font-smoothing

--- a/mixins/_helpers.scss
+++ b/mixins/_helpers.scss
@@ -1,6 +1,6 @@
 // http://stackoverflow.com/questions/11459746/css3-webfont-smoothing-and-antialiasing-in-firefox-and-opera
 @mixin antialiased {
-  -webkit-font-smooting: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
